# CoinMena

./: .gitignore  Dockerfile  Makefile  README.md  entry  pyproject.toml
docker/: docker-compose.services.yml  docker-compose.yml
project/: celery.py  settings.py  urls.py
project/api/: tasks.py  urls.py
project/api/v1/: serializer.py  urls.py  views.py
project/apps/Currency/: admin.py  models.py
project/apps/Currency/migrations/: 0001_initial.py  0002_auto_20210405_1123.py  0003_auto_20210406_1648.py
