[tool.poetry]
name = "CoinMena"
version = "0.1.0"
description = ""
authors = ["hossamelneily <hossamelneily@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
celery = "^5.0.5"
django-celery-beat = "^2.2.0"
django-celery-results = "^2.0.1"
redis = "^3.5.3"
requests = "^2.25.1"
djangorestframework = "^3.12.2"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
pytest = "^6.2.2"
pytest-django = "^4.1.0"
django-health-check = "^3.16.3"
psutil = "^5.8.0"
djangorestframework-api-key = "^2.0.0"
python-decouple = "^3.4"
dj-database-url = "^0.5.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
